--- a/Gene/Info.plist
+++ b/Gene/Info.plist
@@ -15,11 +15,15 @@
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>save photo</string>
+	<key>NSCameraUsageDescription</key>
+	<string>taking pictures</string>
+	<key>CFBundleIdentifier</key>
+	<string></string>
 </dict>
 </plist>
